# wagtailmedia

./: .coveragerc  .drone.yml  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  SPECIFICATION.md  codecov.yml  manage.py  pyproject.toml  ruff.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  report_nightly_build_failure.py
.github/workflows/: codeql-analysis.yml  nightly-tests.yml  pre-commit.yml  publish.yml  ruff.yml  test.yml  zizmore.yml
src/wagtailmedia/: __init__.py  admin.py  admin_urls.py  apps.py  blocks.py  deprecation.py  edit_handlers.py  forms.py  models.py  permissions.py  settings.py  signal_handlers.py  urls.py  utils.py  wagtail_hooks.py  widgets.py
src/wagtailmedia/api/: serializers.py  views.py
src/wagtailmedia/locale/de/LC_MESSAGES/: django.mo  django.po
src/wagtailmedia/locale/en/LC_MESSAGES/: django.po
src/wagtailmedia/locale/fr/LC_MESSAGES/: django.mo  django.po
src/wagtailmedia/locale/ro/LC_MESSAGES/: django.mo  django.po
src/wagtailmedia/locale/ru/LC_MESSAGES/: django.mo  django.po
src/wagtailmedia/locale/uk/LC_MESSAGES/: django.mo  django.po
src/wagtailmedia/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
src/wagtailmedia/migrations/: 0001_initial.py  0002_initial_data.py  0003_copy_media_permissions_to_collections.py  0004_duration_optional_floatfield.py  0005_alter_media_options.py
src/wagtailmedia/static/wagtailmedia/css/: wagtailmedia-comparison.css  wagtailmedia.css
src/wagtailmedia/static/wagtailmedia/js/: media-chooser-modal.js  media-chooser-telepath.js  media-chooser.js  tabs.js
src/wagtailmedia/templates/wagtailmedia/chooser/: chooser-legacy.html  chooser-next.html  chooser.html  results.html
src/wagtailmedia/templates/wagtailmedia/chooser/legacy/: results.html
src/wagtailmedia/templates/wagtailmedia/homepage/: legacy_site_summary_media.html  site_summary_media.html
src/wagtailmedia/templates/wagtailmedia/media/: _file_field.html  _file_field_as_li.html  _thumbnail_field.html  _thumbnail_field_as_li.html  _thumbnail_field_legacy.html  add.html  confirm_delete.html  edit.html  index.html  list.html  results.html  usage.html
src/wagtailmedia/templates/wagtailmedia/media/legacy/: index.html  list.html  results.html  usage.html
src/wagtailmedia/templates/wagtailmedia/permissions/includes/: media_permissions_formset.html
src/wagtailmedia/templates/wagtailmedia/widgets/: compare.html  media_chooser.html
src/wagtailmedia/templatetags/: media_tags.py
src/wagtailmedia/views/: chooser.py  media.py  viewsets.py  webhooks.py
tests/: manage.py  settings.py  test_admin.py  test_api.py  test_blocks.py  test_compare.py  test_edit_handlers.py  test_form.py  test_form_override.py  test_legacy_template_usage.py  test_models.py  test_permissions.py  test_settings.py  test_tags.py  test_utils.py  test_views.py  test_widgets.py  urls.py  utils.py
tests/templates/wagtailmedia/media/: add.html  edit.html
tests/testapp/: __init__.py  apps.py  forms.py  models.py  settings.py  urls.py
tests/testapp/fixtures/: test.json
tests/testapp/migrations/: 0001_initial.py  0002_blogstreampage.py  0003_alter_blogstreampage_body.py
tests/testapp/templates/wagtailmedia_tests/: blog_stream_page.html  event_page.html
tests/testextends/templates/wagtailmedia/media/: edit.html  index.html
tests/testextends/templates/wagtailmedia/media/legacy/: index.html
vagrant/: README  Vagrantfile  provision.sh  runtox.sh
wagtailmedia/: __init__.py  admin.py  admin_urls.py  apps.py  blocks.py  contentstate.py  edit_handlers.py  embed_handlers.py  forms.py  models.py  permissions.py  rich_text.py  signal_handlers.py  urls.py  utils.py  wagtail_hooks.py  widgets.py
wagtailmedia/locale/de/LC_MESSAGES/: django.mo  django.po
wagtailmedia/locale/fr/LC_MESSAGES/: django.mo  django.po
wagtailmedia/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
wagtailmedia/migrations/: 0001_initial.py  0002_initial_data.py  0003_copy_media_permissions_to_collections.py  0004_add_mediainfo.py  0004_auto_20200814_1139.py  0004_auto_20200815_0800.py  0004_duration_optional_floatfield.py  0004_optional_duration.py  0005_auto_20200814_1152.py
wagtailmedia/sniffers/: ffmpeg.py
wagtailmedia/static/wagtailmedia/js/: WagtailMediaBlock.js  media-chooser-modal.js  media-chooser-telepath.js  media-chooser.js
wagtailmedia/static/wagtailmedia/js/hallo-plugins/: hallo-wagtailmedialink.js
wagtailmedia/templates/wagtailmedia/chooser/: chooser.html  chooser.js  media_chosen.js  results.html  select_format.html
wagtailmedia/templates/wagtailmedia/embeds/: audio_embed.html  video_embed.html
wagtailmedia/templates/wagtailmedia/homepage/: site_summary_media.html
wagtailmedia/templates/wagtailmedia/media/: _file_field.html  _file_field_as_li.html  _thumbnail_field.html  _thumbnail_field_as_li.html  add.html  confirm_delete.html  edit.html  index.html  list.html  results.html
wagtailmedia/templates/wagtailmedia/permissions/includes/: media_permissions_formset.html
wagtailmedia/templates/wagtailmedia/widgets/: media_chooser.html
wagtailmedia/tests/: .gitignore  settings.py  test_blocks.py  test_form_override.py  test_models.py  test_permissions.py  test_views.py  test_widgets.py  urls.py
wagtailmedia/tests/templates/wagtailmedia/media/: add.html
wagtailmedia/tests/testapp/: __init__.py  apps.py  forms.py  models.py
wagtailmedia/tests/testapp/fixtures/: test.json
wagtailmedia/tests/testapp/migrations/: 0001_initial.py  0002_auto_20210729_0344.py  0002_blogstreampage.py  0002_django_2_compatibility.py  0002_duration.py
wagtailmedia/tests/testextends/templates/wagtailmedia/media/: index.html
wagtailmedia/views/: chooser.py  media.py  serve.py
