[project]
name = "wagtailmedia"
description = "A Wagtail module for audio and video files."
authors = [{name = "Mikalai Radchuk ", email = "hello@torchbox.com"}]
maintainers = [{name = "Dan Braghis", email="dan.braghis@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Wagtail", "Django", "media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
]

dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Wagtail>=4.1",
    "Django>=3.2",
]

[project.optional-dependencies]
testing = [
    "coverage>=7.4.0",
]
linting = [
    "pre-commit>=3.6.0",
]

[project.urls]
Repository = "https://github.com/torchbox/wagtailmedia"
Changelog = "https://github.com/torchbox/wagtailmedia/blob/main/CHANGELOG.md"
Issues = "https://github.com/torchbox/wagtailmedia/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wagtailmedia"

[tool.flit.sdist]
exclude = [
    "tests",
    "Makefile",
    "docs",
    ".*",
    "*.json",
    "*.ini",
    "*.yml",
    "CHANGELOG.md",
    "SPECIFICATION.md",
    "manage.py",
    "runtests.py",
    "ruff.toml",
]
