[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[flake8]
max-line-length=120
exclude=migrations,dist,build,vagrant,venv
extend-ignore = E203

[isort]
known_first_party=wagtailmedia
known_django=django
known_wagtail=wagtail,modelcluster
skip=migrations,.git,__pycache__,LC_MESSAGES,locale,build,dist,.github
blocked_extensions=rst,html,js,svg,txt,css,scss,png,snap,tsx,sh
sections=FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
lines_between_types=1
lines_after_imports=2
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
ensure_newline_before_comments = True
line_length = 88
